css/queries.css
@media screen and (min-width: 1660px) {
    html, body {
        font-size: 17px;
    }


    @media screen and (min-width: 1920px) {
        html, body {
            font-size: 18px;
        }
    
    }
}

@media screen and (max-width: 1200px) {
    html, body {
        font-size: 12px;
    }

    .title {
        line-height: 1.5;
    }

    .container-menu {
        font-size: 3em;
    }


    .description {
        font-size: 2em;
    }

}




@media screen and (max-width: 1001px) {
    html, body {
        font-size: 12px;
    }
    .container-menu {
        padding: 0;
        height: 95vh;
        width: 100vw;
        font-size: 4em;
        text-align: center;
    }

    .banner-sobre, .banner-full-width {
        flex-direction: column;
    }
    .banner-half {
        width: 100%;
    }
    .card {
        width: 90%;
        margin: 20px auto;
    }

    .title {
        line-height: 1.5;
    }

    .banner-proposito h3 {
        padding: 30px;
    }

    .description {
        font-size: 2em;
    }

    .banner-equipe-content {
        flex-direction: column;
    }
    .rounded-img-wrap, .banner-equipe-title {
        width: 100%;
    }

    .banner-equipe-title p {
        padding: 10px 20px;
        font-size: 2em;
        width: 80%;
        margin: 0 auto;
    }

    .banner-equipe-title h3 {
        width: 80%;
        padding-bottom: 20px;
        text-align: center;
    }

    .banner-left-image-content {
        padding: 20px;
        font-size: 2em;
    }

    .banner-left-overlay {
        height: 30vh;
    }

    .banner-half-content {
        min-height: 70vh !important;
    }
    .banner-contato h4 {
        font-size: 3em;
        text-align: center;
    }

    button {
        font-size: 2.5em;
        margin-bottom: 50px;
    }

}

@media (max-height: 620px) {
    .container-menu {
        height: 100%;
        font-size: 1.2em !important;
    }

}

@media (max-height: 420px) {
    .container-menu {
        height: 100%;
        font-size: 1em !important;
    }
}


@media screen and (max-width: 640px) {
    html, body {
        font-size: 10px;
    }


    .description {
        font-size: 1.6em;
    }


}

@media (max-height: 520px) {
    .container-menu {
        font-size: 2em !important;
    }
}

@media screen and (max-width: 640px) {
    html, body {
        font-size: 10px;
    }
    footer p {
        font-size: 2em;
    }

}

@media screen and (max-width: 548px) {
    .banner-left-image-title {
        font-size: 4.5em;
        width: 80%;
        text-align: center;
        padding: 0;
        margin: 20px auto;
    }

    .padding-top {
        padding: 50px 0;
    }
    .banner-welcome-content-title {
        font-size: 5em;
    }
    .banner-proposito h2{
        font-size: 5em;
        padding: 20px;
    }

    .banner-welcome-title {
        font-size: 7em;
        padding: 100px 40px;
    }

}

